Updated posts and project folders

--- a/posts/templates/login.html
+++ b/posts/templates/login.html
@@ -69,7 +69,7 @@
                     </a>
                 </div>
 
-                <p>Don't have an account? <a href="{% url 'account_signup' %}">Sign up</a></p>
+                <p>Don't have an account? <a href="{% url 'register' %}">Sign up</a></p>
             </div>
         </div>
     </div>
